--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.jpa.properties.dialect.hibernate=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+#Spring Security
+spring.security.user.name=wayne
+spring.security.user.password=wayne
+spring.security.user.roles=GUEST
